force-app/main/default/objects/Contact/fields/cbit__Clearbit__c.field-meta.xml
<CustomField>
    <fullName>cbit__Clearbit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clearbit</label>
    <referenceTo>cbit__Clearbit__c</referenceTo>
    <relationshipLabel>Contacts Clearbit</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>