force-app/main/default/objects/Contact/fields/Chinese_Name__c.field-meta.xml
<CustomField>
    <fullName>Chinese_Name__c</fullName>
    <label>Chinese Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>