force-app/main/default/objects/Contact/fields/Connected_Primary__c.field-meta.xml
<CustomField>
    <fullName>Connected_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Connected Primary</label>
    <type>Checkbox</type>
</CustomField>