force-app/main/default/objects/Contact/fields/Connected_Profile__c.field-meta.xml
<CustomField>
    <fullName>Connected_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Connected Profile</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Connected Profile)</relationshipLabel>
    <relationshipName>Connected_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>