force-app/main/default/objects/Contact/fields/Contact_Domain__c.field-meta.xml
<CustomField>
    <fullName>Contact_Domain__c</fullName>
    <formula>SUBSTITUTE(Email, LEFT(Email, FIND(&quot;@&quot;, Email)), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Domain</label>
    <type>Text</type>
</CustomField>