force-app/main/default/objects/Contact/fields/Corporate_Email__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Email__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate Email</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select the Alternate Email record which is associated with this Contact record only</errorMessage>
        <filterItems>
            <field>Alternate_Email__c.Contact_Name__c</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Alternate_Email__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>