force-app/main/default/objects/Contact/fields/Count_Campaign_History__c.field-meta.xml
<CustomField>
    <fullName>Count_Campaign_History__c</fullName>
    <label>Count Campaign History</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>