force-app/main/default/objects/Contact/fields/Count_Event_Registration__c.field-meta.xml
<CustomField>
    <fullName>Count_Event_Registration__c</fullName>
    <description>Used to count child Event Registration records for Contact</description>
    <inlineHelpText>Count of Event Registration records for Contact</inlineHelpText>
    <label>Count Event Registration</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>