force-app/main/default/objects/Contact/fields/Count_of_Enrollments__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Enrollments__c</fullName>
    <label>Count of Enrollments</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>