force-app/main/default/objects/Contact/fields/Count_Project_Role__c.field-meta.xml
<CustomField>
    <fullName>Count_Project_Role__c</fullName>
    <description>Used to count child Project Role records for Contact</description>
    <inlineHelpText>Count of Project Role records for Contact</inlineHelpText>
    <label>Count Project Role</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>