force-app/main/default/objects/Contact/fields/Count_Travel_Fund_Request__c.field-meta.xml
<CustomField>
    <fullName>Count_Travel_Fund_Request__c</fullName>
    <description>Used to count child Travel Fund Request records for Contact</description>
    <inlineHelpText>Count of Travel Fund Request records for Contact</inlineHelpText>
    <label>Count Travel Fund Request</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>