force-app/main/default/objects/Contact/fields/Count_VISA_Request__c.field-meta.xml
<CustomField>
    <fullName>Count_VISA_Request__c</fullName>
    <description>Used to count child VISA Request records for Contact</description>
    <inlineHelpText>Count of VISA Request records for Contact</inlineHelpText>
    <label>Count VISA Request</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>