force-app/main/default/objects/Contact/fields/Created_BY_Id__c.field-meta.xml
<CustomField>
    <fullName>Created_BY_Id__c</fullName>
    <description>This will be used in report to filter records created by specific User</description>
    <formula>CreatedBy.Id</formula>
    <inlineHelpText>This will be used in report to filter records created by specific User</inlineHelpText>
    <label>Created BY Id</label>
    <type>Text</type>
</CustomField>