force-app/main/default/objects/Contact/fields/Current_Year_Individual_Training_Spend__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Individual_Training_Spend__c</fullName>
    <description>Current Year Individual Training Spend - used in Declarative Rollup Summary tool</description>
    <label>Current Year Individual Training Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>