force-app/main/default/objects/Contact/fields/Cvent_Company__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Company__c</fullName>
    <label>Cvent Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>