force-app/main/default/objects/Contact/fields/Cvent_Company_Domain__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Company_Domain__c</fullName>
    <formula>IF(FIND(&apos;/&apos;,SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( Cvent_Company_URL__c, &apos;http://&apos;, NULL), &apos;https://&apos;, NULL), &apos;www.&apos;, NULL))&gt;0,LEFT(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Cvent_Company_URL__c, &apos;http://&apos;, NULL), &apos;https://&apos;, NULL), &apos;www.&apos;, NULL),FIND(&apos;/&apos;,SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Cvent_Company_URL__c, &apos;http://&apos;, NULL), &apos;https://&apos;, NULL), &apos;www.&apos;, NULL))-1),SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Cvent_Company_URL__c, &apos;http://&apos;, NULL), &apos;https://&apos;, NULL), &apos;www.&apos;, NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cvent Company Domain</label>
    <type>Text</type>
</CustomField>