force-app/main/default/objects/Contact/fields/Cvent_Company_URL__c.field-meta.xml
<CustomField>
    <fullName>Cvent_Company_URL__c</fullName>
    <label>Cvent Company URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>