force-app/main/default/objects/Contact/fields/Date_and_Time_Last_Form_Was_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time_Last_Form_Was_Submitted__c</fullName>
    <label>Date and Time Last Form Was Submitted</label>
    <length>250</length>
    <type>Text</type>
</CustomField>