force-app/main/default/objects/Contact/fields/Dupe_Field_Guide__c.field-meta.xml
<CustomField>
    <fullName>Dupe_Field_Guide__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dupe Field Guide</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>