force-app/main/default/objects/Contact/fields/edx_user_id__c.field-meta.xml
<CustomField>
    <fullName>edx_user_id__c</fullName>
    <externalId>true</externalId>
    <label>edx_user_id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>