force-app/main/default/objects/Contact/fields/engagio__EngagementMinutesLast30Days__c.field-meta.xml
<CustomField>
    <fullName>engagio__EngagementMinutesLast30Days__c</fullName>
    <label>Engagement Minutes (1 mo.)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>