force-app/main/default/objects/Contact/fields/Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Hispanic or Latino</fullName>
            </value>
            <value>
                <fullName>Black or African-American</fullName>
            </value>
            <value>
                <fullName>American Indian or Alaskan Native</fullName>
            </value>
            <value>
                <fullName>Asian</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian or other Pacific islander</fullName>
            </value>
            <value>
                <fullName>Two or more races</fullName>
            </value>
            <value>
                <fullName>I don&apos;t want to provide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>