force-app/main/default/objects/Contact/fields/Executive_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Executive_Assistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>all Contact list</inlineHelpText>
    <label>Executive Assistant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>