force-app/main/default/objects/Contact/fields/FormsSubmitted__c.field-meta.xml
<CustomField>
    <fullName>FormsSubmitted__c</fullName>
    <label>Forms Submitted</label>
    <length>250</length>
    <type>Text</type>
</CustomField>