force-app/main/default/objects/Contact/fields/Github_Followers__c.field-meta.xml
<CustomField>
    <fullName>Github_Followers__c</fullName>
    <label>Github Followers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>