force-app/main/default/objects/Contact/fields/Guid_360_User__c.field-meta.xml
<CustomField>
    <fullName>Guid_360_User__c</fullName>
    <description>Guid for LDAP</description>
    <label>Guid 360 User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>