force-app/main/default/objects/Contact/fields/Hiring_Tech_Professionals__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Tech_Professionals__c</fullName>
    <label>Hiring Tech Professionals</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>