force-app/main/default/objects/Contact/fields/HubSpot_ID__c.field-meta.xml
<CustomField>
    <fullName>HubSpot_ID__c</fullName>
    <inlineHelpText>LF Hubspot ID</inlineHelpText>
    <label>HubSpot ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>