force-app/main/default/objects/Contact/fields/ID_Full__c.field-meta.xml
<CustomField>
    <fullName>ID_Full__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID Full</label>
    <type>Text</type>
</CustomField>