force-app/main/default/objects/Contact/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aerospace &amp; Defense</fullName>
            </value>
            <value>
                <fullName>Air Freight &amp; Logistics</fullName>
            </value>
            <value>
                <fullName>Airlines</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Banks</fullName>
            </value>
            <value>
                <fullName>Beverages</fullName>
            </value>
            <value>
                <fullName>Biotechnology</fullName>
            </value>
            <value>
                <fullName>Building Materials</fullName>
            </value>
            <value>
                <fullName>Capital Goods</fullName>
            </value>
            <value>
                <fullName>Capital Markets</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Commercial Services &amp; Supplies</fullName>
            </value>
            <value>
                <fullName>Communications Equipment</fullName>
            </value>
            <value>
                <fullName>Construction &amp; Engineering</fullName>
            </value>
            <value>
                <fullName>Consumer Discretionary</fullName>
            </value>
            <value>
                <fullName>Consumer Goods</fullName>
            </value>
            <value>
                <fullName>Consumer Services</fullName>
            </value>
            <value>
                <fullName>Consumer Staples</fullName>
            </value>
            <value>
                <fullName>Containers &amp; Packaging</fullName>
            </value>
            <value>
                <fullName>Distributors</fullName>
            </value>
            <value>
                <fullName>Diversified Consumer Services</fullName>
            </value>
            <value>
                <fullName>Diversified Financial Services</fullName>
            </value>
            <value>
                <fullName>Diversified Telecommunication Services</fullName>
            </value>
            <value>
                <fullName>Education Services</fullName>
            </value>
            <value>
                <fullName>Electric Utilities</fullName>
            </value>
            <value>
                <fullName>Electrical Equipment</fullName>
            </value>
            <value>
                <fullName>Electronic Equipment &amp; Instruments</fullName>
            </value>
            <value>
                <fullName>Family Services</fullName>
            </value>
            <value>
                <fullName>Food &amp; Staples Retailing</fullName>
            </value>
            <value>
                <fullName>Food Products</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>