force-app/main/default/objects/Contact/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <label>Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>OnSite Developer</fullName>
            </value>
            <value>
                <fullName>Event Sponsorship</fullName>
            </value>
            <value>
                <fullName>Training/Education</fullName>
            </value>
            <value>
                <fullName>OnSite Enterprise</fullName>
            </value>
            <value>
                <fullName>Open Enroll Developer</fullName>
            </value>
            <value>
                <fullName>Open Enroll Enterprise</fullName>
            </value>
            <value>
                <fullName>CloudOpen</fullName>
            </value>
            <value>
                <fullName>Compliance Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>