force-app/main/default/objects/Contact/fields/IsCampaign__c.field-meta.xml
<CustomField>
    <fullName>IsCampaign__c</fullName>
    <defaultValue>$Label.Campaign</defaultValue>
    <label>IsCampaign</label>
    <length>50</length>
    <type>Text</type>
</CustomField>