force-app/main/default/objects/Contact/fields/Job_Function__c.field-meta.xml
<CustomField>
    <fullName>Job_Function__c</fullName>
    <label>Job Function</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application Developer</fullName>
            </value>
            <value>
                <fullName>Front-End</fullName>
            </value>
            <value>
                <fullName>Back-End</fullName>
            </value>
            <value>
                <fullName>Full Stack</fullName>
            </value>
            <value>
                <fullName>Systems Embedded Developer</fullName>
            </value>
            <value>
                <fullName>Kernel Operating Systems Developer</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Executive Leader</fullName>
            </value>
            <value>
                <fullName>Manager-Technical Teams</fullName>
            </value>
            <value>
                <fullName>Manager-OSPO</fullName>
            </value>
            <value>
                <fullName>Manager-Other</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Product/Biz Dev</fullName>
            </value>
            <value>
                <fullName>Legal/Compliance</fullName>
            </value>
            <value>
                <fullName>Media/Analyst</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Professor/Academic</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Manager - Other</fullName>
            </value>
            <value>
                <fullName>Manager - Technical Teams</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>