force-app/main/default/objects/Contact/fields/Last_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Last_Lead_Source__c</fullName>
    <description>used with Hubspot integration - Sales Motion 2022 roll out</description>
    <label>Last Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Last_Lead_Source</valueSetName>
    </valueSet>
</CustomField>