force-app/main/default/objects/Contact/fields/Last_Modified_By_Platform_User__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By_Platform_User__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will be checked automatically if record modified by Platform User</inlineHelpText>
    <label>Last Modified By Platform User</label>
    <type>Checkbox</type>
</CustomField>