force-app/main/default/objects/Contact/fields/Lead_Source_Integration__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Integration__c</fullName>
    <inlineHelpText>Thisfield is here to support Heroku integration</inlineHelpText>
    <label>Lead Source Integration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>3rd Party Event</fullName>
            </value>
            <value>
                <fullName>Adwords</fullName>
            </value>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>Cold Calling</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Discover.org</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Facebook Ad</fullName>
            </value>
            <value>
                <fullName>GitHub</fullName>
            </value>
            <value>
                <fullName>GitLab</fullName>
            </value>
            <value>
                <fullName>Groups.io</fullName>
            </value>
            <value>
                <fullName>LF Events</fullName>
            </value>
            <value>
                <fullName>LF Home</fullName>
            </value>
            <value>
                <fullName>LF Project</fullName>
            </value>
            <value>
                <fullName>LF Training</fullName>
            </value>
            <value>
                <fullName>LinkedIn Ad</fullName>
            </value>
            <value>
                <fullName>Linux.com</fullName>
            </value>
            <value>
                <fullName>Meetup</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Networking</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Sugar CRM</fullName>
            </value>
            <value>
                <fullName>LF Event</fullName>
            </value>
            <value>
                <fullName>Edx</fullName>
            </value>
            <value>
                <fullName>TI Portal</fullName>
            </value>
            <value>
                <fullName>LF Auth0</fullName>
            </value>
            <value>
                <fullName>Cvent</fullName>
            </value>
            <value>
                <fullName>TI Corp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>