force-app/main/default/objects/Contact/fields/LinkedIn_ID__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_ID__c</fullName>
    <label>LinkedIn ID</label>
    <type>Url</type>
</CustomField>