force-app/main/default/objects/Contact/fields/Marked_as_Lead_Converted__c.field-meta.xml
<CustomField>
    <fullName>Marked_as_Lead_Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked as Lead Converted</label>
    <type>Checkbox</type>
</CustomField>