force-app/main/default/objects/Contact/fields/MC_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>MC_Contact_ID__c</fullName>
    <description>Contact ID</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC Contact ID</label>
    <type>Text</type>
</CustomField>