force-app/main/default/objects/Contact/fields/MC_Hard_Bounce_Date__c.field-meta.xml
<CustomField>
    <fullName>MC_Hard_Bounce_Date__c</fullName>
    <label>MC Hard Bounce Date</label>
    <length>250</length>
    <type>Text</type>
</CustomField>